syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;

enum CurrencyProto {
  RUB = 0;
  CNY = 1;
  EUR = 2;
  USD = 3;
  GBP = 4;
}

message DecimalValue {
  uint32 scale = 1;
  uint32 precision = 2;
  bytes value = 3;
}

message CurrencyRequest {
  CurrencyProto from = 1;
  CurrencyProto to = 2;
  DecimalValue amount = 3;
}

message CurrencyResponse {
  CurrencyProto base = 1;
  DecimalValue convertedAmount = 2;
}

service ConverterService {
  rpc GetConvertedCurrency (CurrencyRequest) returns (CurrencyResponse) {
  }
}
